# fun_coding

./: .gitignore
cses/: 001-WeirdAlgorithm.cpp  002-MissingNumber.cpp  003-Repetitions.cpp  004-IncreasingArray.cpp  005-Permutations.cpp
jane_street/2023_06-Hooks9/: README.md  scrap.md
jane_street/2023_06-Hooks9/data/hook_combos/: combos.txt
jane_street/2023_06-Hooks9/src/: a.out  gcd.cpp  make_hook_combos.py
leetcode/0001-TwoSum/: 0001.cpp
leetcode/0009-PalindromeNumber/: 0009.cpp
leetcode/0121-BestTimeToBuyAndSellStock/: 0121.cpp
leetcode/1436-DestinationCity/: 1436.cpp
leetcode/1449-FormLargestIntegerWithDigitsThatAddUpToTarget/: 1449.cpp  README.md
leetcode/2303-CalculateAmountPaidInTaxes/: 2303.c  2303.cpp  2303.py
leetcode/python/: 0001-TwoSum.py
misc/: 20230628_TwitterQuantQuestion.py
misc/prime_tester/: CMakeLists.txt  README.md  main.cpp  makefile  messages.cpp  messages.hpp  miller_rabin.cpp  miller_rabin.hpp
project_euler/0763-AmobeasInA3DGrid/: README.md  scrap.py
project_euler/0763-AmobeasInA3DGrid/src/: main.cpp
